function table generics - draft